# fapi_monobase

./: .gitignore  README.md  deploy_blue_green.conf.json  deploy_blue_green.py  docker-compose.build.yaml  docker-compose.dev-local.yaml  docker-compose.dev.yaml  docker-compose.monitoring.yaml  docker-compose.mysql-baker.yaml  docker-compose.prod.yaml  docker-compose.test.yaml  local-compose.yaml  todo  zero-downtime-nginx-scale.py
services/api/: .coverage  Dockerfile  pyproject.toml
services/api/app/: config.py  db.py  gunicorn_conf.py  main.py
services/api/app/application/: dependencies.py  exceptions.py
services/api/app/application/intefraces/: __init__.py  auth_strategies.py  auth_strategies_interface.py
services/api/app/application/interfaces/: __init__.py  auth_strategies.py  tasks.py
services/api/app/application/models/: session.py
services/api/app/application/repositories/: __init__.py  sessions.py  (+1 more)
services/api/app/common/: common.py  config.py  exceptions.py
services/api/app/domain/: exceptions.py
services/api/app/infrastructure/: dependencies.py  exceptions.py
services/api/app/logs/: log.py
services/api/app/models/: common.py
services/api/app/presentation/: exception_handlers.py
services/api/app/routers/: user.py
services/api/app/rqueue/: queue.py
services/api/app/security/: base.py
services/api/app/utils/: common.py  exceptions.py
services/api/tests/: conftest.py
services/api/tests/helpers/: tokens.py  users.py
services/api/tests/integration/: conftest.py
services/api/tests/mocks/: __init__.py  hasher.py  traces.py
(+90 files in other folders)
